main.css
@import url('https://fonts.googleapis.com/css2?family=Livvic&display=swap');


/* ============== Resets ============== */ 

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
* {
	max-width: 100%;
	max-height: 100%;
	box-sizing: border-box;
	
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* ============== variables ============== */ 
:root {
	--logo-size: 6.4rem;
	--anchor-size: 2.4rem;
	/* --general-font-size: 2.4rem; */
	--general-font-size: calc(.8rem + 1vw);
	--cta-headings-size: 6.4rem;
	--span-bold-font-size: 3.6rem;
	--button-size: 2.4rem;
	--nav-links-color: #535151;
	--logo-font-color: #535151;
	--bold-font-color: black;
	--cta-headings-font-color: white;
	--general-font-color: #535151;
	--button-font-color: white;
	--button-color: #535151;
	--footer-background-color: #535151;
	--footer-font-color: white;


/* ============== Mobile variables ============== */ 
--h2-headings: 3.2rem;
--m-logo-size: 4.5rem;
--m-span-bold-font-size: 2.4rem;
--m-button-size: 1.8rem;
--m-span-bold-font-size: 2.4rem;
--m-cta-headings-size: 4.5rem;
}

/* ============== Global Styles ============== */ 
html {
	font-size:10px;
}

body {
	font-family: 'livvic', sans-serif, 'roboto';
	
}

/* ============== Typography ============== */ 
h1 {
	font-size: var(--logo-size);
	color: var(--logo-font-color);
	text-transform: uppercase;
}

h2 {
	font-size: var(--cta-headings-size);
	color: white;
}

a {
	font-size: var(--anchor-size);
	color: var(--general-font-color);
	text-decoration: none;
}

nav a {
	font-size: var(--anchor-size);
	color: var(--nav-links-color);
}

p {
	font-size: var(--general-font-size);
	
}

/* ============== Javascript Applied Styles ============== */ 


.gallery-box {
	position: absolute;
	width:100vw;
	height: 100vh;
	right:0rem;
	background-size: cover;
	overflow: hidden;	
}

.hide-container {
	max-height: .5px;
}

/* ============== Layout ============== */ 
.body-wrapper {
	padding: 0 5rem 0rem 5rem;
	display: grid;
	grid-gap: 10rem;
	grid-template-areas: 
	'landing landing landing'
	'about about about'
	'img img img'
	'img img img'
	'pops pops pops'
	'footer footer footer';


}

header {
	display: flex;
	justify-content: space-between;
	padding: 2rem;
}

.drop-down {
	display: none;
}

.close {
	display: none;
}

header a {
	margin-right: 2rem;
	cursor: pointer;
}

nav {
	line-height: 2;
}

#landing {
	position: relative;
	grid-area: landing;
	height: 100vh;
}

.hero-container {
	width: 100%;
	height: 79%;
	background-image: url(images/sewn2.jpg);
	background-size: cover;
	background-position: center;
}

.cta-headers-button-container {
	position: absolute;
	padding: 2rem;
	background-color: rgba(0, 0, 0, 0.2);
	height: 20rem;
	bottom: 25rem;
	left: -3rem;
	text-align: center;
}

.cta-headers-button-container span {
color: var(--bold-font-color);
text-transform: uppercase;
}

.cta-headers-button-container .btn {
	position: absolute;
	bottom: -1rem;
	left: 35%;
	height: 5rem;
	width: 15rem;
	background-color: var(--button-color);
	color: var(--button-font-color);
	text-align: center;
	line-height: 2;
}

.cta-headers-button-container a {
	color: var(--button-font-color);
	text-decoration: none;
}

.scroll {
	margin-top: 2rem;
	margin-left: 50%;
}

#about {
	grid-area: about;
	display: flex;
	/* height: 100vh; */
	
}

.about-description-container {
	padding: 0 3rem 0 3rem;
	line-height: 2.5;
	width: 45%;
	overflow: hidden;
}

.about-description-container p span {
	font-size: var(--span-bold-font-size);
	text-transform: uppercase;
}

.about-img-container {
	background-image: url(images/sewn6.jpg);
	background-position: center;
	width: 45%;
}

.main-side-bar-image {
	background-image: url(images/sewn9.jpg);
	background-position: center;
	width: 25%;
}

#look-book {
	overflow: hidden;
	grid-area: img;
	height: 100vh;
	position: relative;
}

#look-book h2 {
	color: black;
	text-transform: uppercase;
	margin-bottom: 2rem;
}

.look-book-image-container {
	display: grid;
	grid-template-areas: 
	'one one one two'
	'three four five two';
	grid-gap: 1rem;
	justify-items: stretch;
	height: 100%;
	width: 100%;
	overflow: hidden;
}

.one {
	grid-area: one;
	background-image: url(images/sewn1.jpg);
	background-position: center;
}


.two {
	grid-area: two;
	background-image: url(images/sewn3.jpg);
	background-position: center;
}


.three {
	grid-area: three;
	background-image: url(images/sewn4.jpg);
	background-size: cover;
	background-position: 80% 100%;
}


.four {
	grid-area: four;
	background-image: url(images/sewn8.jpg);
	background-position: center;
	background-size: cover;
	background-position: 70%;
}


.five {
	grid-area: five;
	background-image: url(images/sewn7.jpg);
	background-size: cover;
	background-position: center;
}


#pop-ups {
	width: 100%;
	grid-area: pops;
	display: grid;
	gap: 0;
	grid-template-columns: repeat(4, 1fr);
	grid-template-areas: 
	'desc desc image image'
	'form form image image';
}

.pop-ups-paragraph-forms {
	grid-column:  1 / 3;
	overflow: hidden;
}

.pop-up-text-card {
	grid-area: desc;
	padding-right: 5rem;
	line-height: 2.5;
	overflow: hidden;
}

.pop-up-text-card span {
	text-transform: uppercase;
	font-size: var(--span-bold-font-size);
	color: var(--bold-font-color);
}

form {
	grid-area: form;
	width: 100%;
	padding-right: 5rem;
	margin-top: 5rem;
}

input {
	width: 80%;
	height: 5rem;
	border: none;
	box-shadow: 1px 1px 4px #888888;
}

label {
	display: inline-block;
	font-size: var(--general-font-size);
	padding: 2rem;
}

button {
	margin-top: 2rem;
	height: 5rem;
	width: 80%;
	background-color: var(--button-color);
	color: var(--button-font-color);
	text-align: center;
	line-height: 2;
	border: none;
}

.pop-up-image-container {	
	grid-area: image;
	background-image: url(images/sewn10.jpg);
	background-size: cover;
}

#footer {
	display: flex;
	justify-content: space-between;
	align-items: center;
	grid-area: footer;
	background-color: var(--footer-background-color);
	color: var(--footer-font-color);
	text-align: center;
	line-height: 2;
	width: 100%;
	height: 10rem;
	overflow: hidden;
}

.icon-container {
	width: 30rem;
}

i {
	color: white;
	font-size: 4rem;
	margin: 2rem;
	cursor: pointer;
}

footer p {
	font-size: var(--general-font-size);
	margin-left: 2rem;
}

footer nav {
	color: white;
}

footer nav a {
	color: white;
	font-size: var(--general-font-size);
	margin-right: 2rem;
}

/* ============== Tablet Styles ============== */ 
@media(max-width: 814px) {

/* ==============Typography============== */
nav a {
	color: white;
}

/* javascript applied Styles */
.reposition-look-book {
	margin-bottom: -140rem;
}

.open-menu {
	right: -6rem;
	background-color: var(--button-color);
	z-index: 100;
}

/* ============== Layout ============== */ 

.body-wrapper {
	grid-gap: 5rem;
	overflow: hidden;
}
header nav {
display: flex;
position: absolute;
height: 100%;
width: 100vw;
right: -1000px;
top: -2rem;
flex-direction: column;
align-items: center;
justify-content: flex-start;
transition: all .4s;

}

header nav a {
	margin-top: 9rem;
	margin: 4rem;
}

.drop-down {
	display: block;
}

.close {
	display: block;
	height: 3rem;
	align-self: flex-end;
	margin-right: 7rem;
	margin-top: 6rem;
}

.cta-headers-button-container {
	text-align: left;
	height: 40rem;
	width: 35rem;
	bottom: 10rem;
}

.cta-headers-button-container .btn {
	left: 10rem;
}

#about {
	height: auto;
}

.about-img-container {
	display: none;
}

.about-description-container {
	width: 50%;
}

.main-side-bar-image {
	width: 50%;
}

#look-book {
	height: 300vh;
}


.look-book-image-container {
	display: grid;
	grid-template-areas: 
	'one one one one'
	'two two two two'
	'three three three three'
	'four four four four';
	grid-gap: 1rem;
	justify-items: stretch;
	height: 100%;
	width: 100%;
}

.one {
	grid-column: 1/ 5;
	grid-row: span 2;
}


.two {
	grid-column: 1/ 5;
	grid-row: span 2;
}


.three {
	grid-column: 1/ 5;
	grid-row: span 2;
}


.four {
	grid-column: 1/ 5;
	grid-row: span 2;
}


.five {
	grid-column: 1/ 5;
	grid-row: span 2;
}


.pop-up-text-card {
	line-height: 2.5;
}

.pop-up-image-container {
	background-position:right;
}

input {
	width: 100%;
	border: 1px solid black;
	box-shadow: none;
}

button {
	width: 100%;
}

footer nav {
	display: flex;
	flex-direction: column;
}

footer nav a {
	font-size: 1rem;
}

}

/* ============== Mobile Styles ============== */ 
@media(max-width: 600px) {

/* ============== Typography ============== */ 
	h1 {
		font-size: var(--m-logo-size);
		color: var(--logo-font-color);
		text-transform: uppercase;
	}
	
	h2 {
		font-size: var(--m-cta-headings-size);
		color: white;
	}
	
	
	p {
		font-size: 1.6rem;
		line-height: 1.5;
		
	}

	.about-description-container p span {
		font-size: var(--m-span-bold-font-size);
	}

	.pop-up-text-card span {
		font-size: 2.4rem;
	}

	#look-book h2 {
		font-size: var(--h2-headings);
	}


/* ============== Layout ============== */ 

.body-wrapper {
	padding: 2rem;
}

	.drop-down {
		height: 3rem;
		position: absolute;
		right: -1rem;
	}

	.close {
		margin-right: 4rem;
		margin-top: 5rem;
	}

	.cta-headers-button-container {
		width: 25rem;
		bottom: 12rem;
		left: -1rem;
	}

	.cta-headers-button-container .btn {
		left: 4rem;
	}

	.about-description-container {
		padding: 1rem;
	}

	.about-description-container p {
		line-height: 1.5;
	}

	.one {
		background-position: 50% 30%;
	}

	.two {
		background-position: 50% 30%;
	}


	.pop-up-text-card{
		padding: 0 1rem 0 1rem;
	}

	.pop-up-text-card p {
		line-height: 1.5;
	}

	form {
		margin-top: 1rem;
		padding: 0;
	}

	input {
		height: 3rem;
		width: 90%;
		box-shadow: none;
	}

	button {
		height: 3rem;
		width: 90%;
	}

	i {
		font-size: 1.5rem;
		margin: 1rem;
	}
}

/* ============== Small devices ============== */ 
@media(max-width:345px){

/* ============== Typography ============== */ 

p {
	font-size: 1.2rem;
}


.cta-headers-button-container {
	height: 30rem;
}

.pop-up-image-container {
	background-position: 90% 10%;
}

}

